[B]Version 1.1.153[/B]
- AWM Network - fix listing